--- a/components/banner/Banner.module.scss
+++ b/components/banner/Banner.module.scss
@@ -2,7 +2,7 @@
 
 .banner {
   &_body {
-    background: red;
+    background: white;
     position: sticky;
     top: 260px;
     left: 0;
